fix spacing in footer

--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -5,6 +5,10 @@ footer {
     padding: 2rem;
 }
 
+footer p {
+    margin-bottom: 0.5rem;
+}
+
 footer a {
     text-decoration: none;
     color: rgb(198, 100, 255);
